# gpgme

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  appveyor.yml  build.rs  rustfmt.toml
.github/workflows/: ci.yml  publish.yml
.travis/: install-gettext.sh
docker/: Dockerfile.static  Dockerfile.windows
examples/: decrypt.rs  encrypt.rs  export.rs  import.rs  keylist.rs  keysign.rs  sign.rs  swdb.rs  verify.rs
gpgme-sys/: Cargo.toml  build.rs  consts.rs  funcs.rs  gpgme-remove-doc.patch  lib.rs  libassuan-remove-doc.patch  rustfmt.toml  types.rs
gpgme-sys/src/: consts.rs  funcs.rs  lib.rs  types.rs
libgpg-error-sys/: Cargo.toml  build.rs  lib.rs
src/: callbacks.rs  context.rs  data.rs  edit.rs  engine.rs  error.rs  flags.rs  keys.rs  lib.rs  notation.rs  ops.rs  results.rs  tofu.rs  traits.rs  trust.rs  utils.rs
systest/: Cargo.toml  build.rs
systest/src/: main.rs
tests/: context.rs  create_key.rs  data.rs  decrypt.rs  decrypt_verify.rs  edit.rs  encrypt.rs  encrypt_sign.rs  encrypt_simple.rs  encrypt_symmetric.rs  export.rs  import.rs  keylist.rs  keysign.rs  notations.rs  sign.rs  signers.rs  support.rs  symmetric.rs  verify.rs
tests/common/: mod.rs
tests/common/data/: gpg-agent.conf  gpg.conf
