[package]
name = "gpgme"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/gpgme"
categories = ["api-bindings"]
keywords = ["gpg", "gpgme", "crypto", "cryptography"]
description = "GPGme bindings for Rust"

[badges]
maintenance = { status = "experimental" }

[features]
"v1_18" = ["v1_17"]
"v1_17" = ["v1_16"]
"v1_16" = ["v1_15"]
"v1_15" = ["v1_14"]
"v1_14" = ["v1_13"]
"v1_13" = []

[dev-dependencies]
structopt = "0.3"
tempfile = "3"

[dependencies]
bitflags = "1"
conv = "0.3"
cstr-argument = "0.1"
gpg-error = "0.5.1"
libc.workspace = true
memoffset = "0.7.1"
once_cell = "1"
smallvec = "1"
static_assertions = "1.1"

[dependencies.ffi]
package = "gpgme-sys"
path = "gpgme-sys"
version = "0.10.0"

[[bin]]
name = "pinentry"
test = false

[workspace.package]
version = "0.10.0"
edition = "2021"
license = "LGPL-2.1"
repository = "https://github.com/gpg-rs/gpgme"

[workspace.dependencies]
libc = "0.2"
