[package]
name = "gpgme"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
categories = ["api-bindings"]
keywords = ["gpg", "gpgme", "crypto", "cryptography"]
description = "GPGme bindings for Rust"

[package.metadata.docs.rs]
all-features = true

[badges]
maintenance = { status = "experimental" }

[features]
"v1_23" = ["v1_22"]
"v1_22" = ["v1_21"]
"v1_21" = ["v1_20"]
"v1_20" = ["v1_19"]
"v1_19" = ["v1_18"]
"v1_18" = ["v1_17"]
"v1_17" = ["v1_16"]
"v1_16" = ["v1_15"]
"v1_15" = ["v1_14"]
"v1_14" = ["v1_13"]
"v1_13" = []

[dev-dependencies]
clap = { version = "4.4.11", features = ["derive"] }
tempfile = "3"

[dependencies]
bitflags = "2"
cfg-if = "1"
conv = "0.3"
cstr-argument = "0.1"
gpg-error = "0.6.0"
libc.workspace = true
memoffset = "0.9.0"
smallvec = "1"
static_assertions = "1.1"

[dependencies.ffi]
package = "gpgme-sys"
path = "gpgme-sys"
version = "0.11.0"

[[bin]]
name = "pinentry"
test = false

[lints.rust]
missing_debug_implementations = "warn"

[lints.clippy]
useless_conversion = "allow"

[workspace.package]
version = "0.11.0"
edition = "2021"
rust-version = "1.64"
license = "LGPL-2.1"
repository = "https://github.com/gpg-rs/gpgme"

[workspace.dependencies]
libc = "0.2"
