[package]
name = "gpgme"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories = ["api-bindings"]
keywords = ["gpg", "gpgme", "crypto", "cryptography"]
description = "GPGme bindings for Rust"

[package.metadata.docs.rs]
features = "latest"

[package.metadata.cargo-semver-checks.lints]
function_must_use_added = "allow"
inherent_method_must_use_added = "allow"
struct_must_use_added = "allow"
enum_must_use_added = "allow"
trait_must_use_added = "allow"
union_must_use_added = "allow"

[features]
windows_raw_dylib = ["ffi/windows_raw_dylib"]
latest = ["v1_23"]
"v1_23" = ["v1_22"]
"v1_22" = ["v1_21"]
"v1_21" = ["v1_20"]
"v1_20" = ["v1_19"]
"v1_19" = ["v1_18"]
"v1_18" = ["v1_17"]
"v1_17" = ["v1_16"]
"v1_16" = ["v1_15"]
"v1_15" = ["v1_14"]
"v1_14" = ["v1_13"]
"v1_13" = []

[dev-dependencies]
clap = { version = "4.5.20", features = ["derive"] }
sealed_test = "1.1.0"

[dependencies]
bitflags = "2"
cfg-if = "1"
conv = "0.3"
cstr-argument = "0.1"
gpg-error = "0.6.2"
libc.workspace = true
smallvec = "1"
static_assertions = "1.1"

[dependencies.ffi]
package = "gpgme-sys"
path = "gpgme-sys"
version = "0.11.0"

[[bin]]
name = "pinentry"
test = false

[lints.rust]
missing_debug_implementations = "warn"

[lints.clippy]
useless_conversion = "allow"

[workspace.package]
version = "0.11.0"
edition = "2021"
license = "LGPL-2.1"
repository = "https://github.com/gpg-rs/gpgme"

[workspace.dependencies]
libc = "0.2"
