[package]
name = "gpgme-sys"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
categories = ["external-ffi-bindings"]
keywords = ["gpg", "gpgme", "crypto", "cryptography"]
description = "Raw bindings for gpgme"
links = "gpgme"

[package.metadata.system-deps]
gpgme = "1.13"

[badges]
maintenance = { status = "experimental" }

[build-dependencies]
system-deps = "6.2.0"

[dependencies]
libc.workspace = true
libgpg-error-sys = "0.6.0"

[target.'cfg(windows)'.build-dependencies]
build-rs = "0.1.2"
winreg = "0.52.0"

[lints.rust]
nonstandard-style = { level = "allow", priority = 1 }
