[package]
name = "gpgme-sys"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories = ["external-ffi-bindings"]
keywords = ["gpg", "gpgme", "crypto", "cryptography"]
description = "Raw bindings for gpgme"
links = "gpgme"

[package.metadata.system-deps]
gpgme = "1.13"

[features]
windows_raw_dylib = ["libgpg-error-sys/windows_raw_dylib"]

[build-dependencies]
build-rs = "0.1.2"
system-deps = "6.2.2"

[dependencies]
libc.workspace = true
libgpg-error-sys = "0.6.2"

[target.'cfg(windows)'.build-dependencies]
winreg = "0.52.0"

[lints.rust]
nonstandard-style = { level = "allow", priority = 1 }
